rustdocs/errors/rust-bitcoin-hashes-src-sha256t-mod.rs.txt
error[E0433]: failed to resolve: you might be missing crate `core`
 --> ../rust-bitcoin/hashes/src/sha256t/mod.rs:6:5
  |
6 | use core::marker::PhantomData;
  |     ^^^^
  |     |
  |     you might be missing crate `core`
  |     help: try using `std` instead of `core`: `std`

error[E0432]: unresolved import `core`
 --> ../rust-bitcoin/hashes/src/sha256t/mod.rs:5:5
  |
5 | use core::cmp;
  |     ^^^^
  |     |
  |     you might be missing crate `core`
  |     help: try using `std` instead of `core`: `std`

error[E0432]: unresolved import `crate::sha256`
 --> ../rust-bitcoin/hashes/src/sha256t/mod.rs:9:12
  |
9 | use crate::sha256::Midstate;
  |            ^^^^^^ use of unresolved module or unlinked crate `sha256`
  |
help: you might be missing a crate named `sha256`, add it to your project and import it in your code
  |
5 + extern crate sha256;
  |

error[E0432]: unresolved import `crate::sha256`
  --> ../rust-bitcoin/hashes/src/sha256t/mod.rs:10:13
   |
10 | use crate::{sha256, HashEngine as _};
   |             ^^^^^^ no `sha256` in the root

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `internals`
  --> ../rust-bitcoin/hashes/src/sha256t/mod.rs:46:1
   |
46 | internals::transparent_newtype! {
   | ^^^^^^^^^ use of unresolved module or unlinked crate `internals`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `internal_macros`
   --> ../rust-bitcoin/hashes/src/sha256t/mod.rs:128:8
    |
128 | crate::internal_macros::hash_trait_impls!(256, false, T: Tag);
    |        ^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `internal_macros`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `internal_macros`
   --> ../rust-bitcoin/hashes/src/sha256t/mod.rs:155:8
    |
155 | crate::internal_macros::impl_write!(
    |        ^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `internal_macros`

error[E0573]: expected type, found derive macro `Hash`
  --> ../rust-bitcoin/hashes/src/sha256t/mod.rs:13:32
   |
13 | pub fn hash<T>(data: &[u8]) -> Hash<T>
   |                                ^^^^^^^ not a type
   |
help: consider importing this trait instead
   |
 5 + use std::hash::Hash;
   |

error[E0573]: expected type, found derive macro `Hash`
  --> ../rust-bitcoin/hashes/src/sha256t/mod.rs:25:53
   |
25 | pub fn hash_byte_chunks<B, I, T>(byte_slices: I) -> Hash<T>
   |                                                     ^^^^^^^ not a type
   |
help: consider importing this trait instead
   |
 5 + use std::hash::Hash;
   |

error[E0573]: expected type, found derive macro `Hash`
  --> ../rust-bitcoin/hashes/src/sha256t/mod.rs:61:9
   |
61 | impl<T> Hash<T>
   |         ^^^^^^^ not a type
   |
help: consider importing this trait instead
   |
 5 + use std::hash::Hash;
   |

error[E0573]: expected type, found derive macro `Hash`
   --> ../rust-bitcoin/hashes/src/sha256t/mod.rs:106:23
    |
106 | impl<T: Tag> Copy for Hash<T> {}
    |                       ^^^^^^^ not a type
    |
help: consider importing this trait instead
    |
  5 + use std::hash::Hash;
    |

error[E0573]: expected type, found derive macro `Hash`
   --> ../rust-bitcoin/hashes/src/sha256t/mod.rs:107:24
    |
107 | impl<T: Tag> Clone for Hash<T> {
    |                        ^^^^^^^ not a type
    |
help: consider importing this trait instead
    |
  5 + use std::hash::Hash;
    |

error[E0573]: expected type, found derive macro `Hash`
   --> ../rust-bitcoin/hashes/src/sha256t/mod.rs:110:28
    |
110 | impl<T: Tag> PartialEq for Hash<T> {
    |                            ^^^^^^^ not a type
    |
help: consider importing this trait instead
    |
  5 + use std::hash::Hash;
    |

error[E0573]: expected type, found derive macro `Hash`
   --> ../rust-bitcoin/hashes/src/sha256t/mod.rs:113:21
    |
113 | impl<T: Tag> Eq for Hash<T> {}
    |                     ^^^^^^^ not a type
    |
help: consider importing this trait instead
    |
  5 + use std::hash::Hash;
    |

error[E0573]: expected type, found derive macro `Hash`
   --> ../rust-bitcoin/hashes/src/sha256t/mod.rs:114:29
    |
114 | impl<T: Tag> PartialOrd for Hash<T> {
    |                             ^^^^^^^ not a type
    |
help: consider importing this trait instead
    |
  5 + use std::hash::Hash;
    |

error[E0573]: expected type, found derive macro `Hash`
   --> ../rust-bitcoin/hashes/src/sha256t/mod.rs:119:22
    |
119 | impl<T: Tag> Ord for Hash<T> {
    |                      ^^^^^^^ not a type
    |
help: consider importing this trait instead
    |
  5 + use std::hash::Hash;
    |

error[E0573]: expected type, found derive macro `Hash`
   --> ../rust-bitcoin/hashes/src/sha256t/mod.rs:124:35
    |
124 | impl<T: Tag> core::hash::Hash for Hash<T> {
    |                                   ^^^^^^^ not a type
    |
help: consider importing this trait instead
    |
  5 + use std::hash::Hash;
    |

error[E0404]: expected trait, found struct `crate::HashEngine`
   --> ../rust-bitcoin/hashes/src/sha256t/mod.rs:145:14
    |
145 | impl<T: Tag> crate::HashEngine for HashEngine<T> {
    |              ^^^^^^^^^^^^^^^^^ not a trait

error[E0573]: expected type, found derive macro `Hash`
   --> ../rust-bitcoin/hashes/src/sha256t/mod.rs:146:17
    |
146 |     type Hash = Hash<T>;
    |                 ^^^^^^^ not a type
    |
help: consider importing this trait instead
    |
  5 + use std::hash::Hash;
    |

error[E0206]: the trait `Copy` cannot be implemented for this type
   --> ../rust-bitcoin/hashes/src/sha256t/mod.rs:106:23
    |
106 | impl<T: Tag> Copy for Hash<T> {}
    |                       ^^^^^^^ type is not a structure or enumeration

error[E0223]: ambiguous associated type
   --> ../rust-bitcoin/hashes/src/sha256t/mod.rs:152:26
    |
152 |     fn finalize(self) -> Self::Hash { Hash::from_engine(self) }
    |                          ^^^^^^^^^^
    |
help: if there were a trait named `Example` with associated type `Hash` implemented for `HashEngine<T>`, you could use the fully-qualified path
    |
152 -     fn finalize(self) -> Self::Hash { Hash::from_engine(self) }
152 +     fn finalize(self) -> <HashEngine<T> as Example>::Hash { Hash::from_engine(self) }
    |

error: aborting due to 21 previous errors

Some errors have detailed explanations: E0206, E0223, E0404, E0432, E0433, E0573.
For more information about an error, try `rustc --explain E0206`.
